--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -47,11 +47,18 @@ li {
 #pwdInput {
     margin-right: 5px;
 }
+.null-message {
+    font-weight: 500;
+    font-style: italic;
+    color: #14b8a6;
+    font-size: 15px;
+}
 /* 캘린더 */
 .fc th {
     background-color: rgba(223, 245, 243, 0.3);
 }
 :root {
+    --fc-event-border-color: #14b8a6;
     --fc-button-bg-color: #14b8a6;
     --fc-button-border-color: #14b8a6;
     --fc-button-hover-bg-color: #109385;
@@ -60,6 +67,10 @@ li {
     --fc-button-active-border-color: #0d766a;
     --fc-non-business-color: rgba(223, 245, 243, 0.3);
 }
+.fc-event-main-frame > .fc-event-time, .fc-event-future > .fc-event-time {
+    display: none;
+}
+
 /* 마이페이지 메인페이지 start */
 /* 공통 */
 .mypage-wrapper {
@@ -107,32 +118,31 @@ li {
 }
 
 /* 나의 펫 정보 영역 */
-#myPetInfo-area {
+.myPetInfo-area {
     padding: 5px;
     margin: 15px 5px 5px;
     border-radius: 5px;
     border: 1px solid #9fe1da;
+    transition: box-shadow 0.3s;
     display: flex;
     flex-direction: row;
-    transition: box-shadow 0.3s;
 }
-#myPetInfo-area .info-li {
+.myPetInfo-area .info-li {
     padding-top: 6px;
 }
-
 #my-pet-profile-img {
     width: 60px; 
     height: 60px;
     padding: 5px;
 }
 
-#myInfo-area:hover, #myPetInfo-area:hover {
+#myInfo-area:hover, .myPetInfo-area:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 /* 마이페이지 메인페이지 end */
 
 /* 반려친구 관리, 일정 관리 버튼 */
-.h2-wrapper > button {
+.h2-wrapper > button, #event-modal-register-btn {
     background: linear-gradient(to right, #14B8A6, #43c6b8);
     color: #fff;
     padding: 10px 20px;
@@ -142,11 +152,11 @@ li {
     transition: background 0.3s, transform 0.3s;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
-.h2-wrapper > button:hover {
+.h2-wrapper > button:hover, #event-modal-register-btn:hover {
     background: linear-gradient(to right, #109385, #14B8A6);
     transform: translateY(-2px);
 }
-.h2-wrapper > button:active {
+.h2-wrapper > button:active, #event-modal-register-btn:active {
     transform: translateY(0);
 }
 
@@ -184,3 +194,64 @@ li {
     transform: translateY(0);
 }
 /* 계정 정보 관리, 계정 탈퇴 비밀번호 확인 페이지 end */
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 30;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content {
+    background-color: #dff5f3;
+    margin: 10vh auto;
+    padding: 2rem;
+    border: 1px solid #888;
+    width: 50%;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  }
+  
+  .close-btn {
+    color: #aaaaaa;
+    float: right;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 20px;
+  }
+  
+  .close-btn:hover,
+  .close-btn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+  
+  .modal-area {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+  }
+  
+  .modal-area div {
+    padding: 5px 0 5px;
+  }
+  
+  .modal-area h2 {
+    font-size: 22px;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 0.5rem;
+  }
+
+  .button-align-right {
+    text-align: right;
+  }
