--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -41,9 +41,9 @@
 				</div>
 			</div>
 	  	</header>
-		<div id="search-modal" class="modal">
-			<div class="modal-content">
-				<div class="ping"></div><div class="modal-text">검색중입니다. 잠시만 기다려주세요.</div>
+		<div id="search-modal">
+			<div id="search-modal-content">
+				<div class="ping"></div><div id="search-modal-text">검색중입니다. 잠시만 기다려주세요.</div>
 			</div>
 		</div>
 	</div>
