--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -216,14 +216,17 @@
                         <li><strong>전화번호 : </strong> <span th:text="${user.country_code + '-' + user.first_hp + '-' + user.second_hp}"></span></li> -->
                     </div>
                 </div>
-                <div id="myPetInfo-area">
-                    <!-- <div><img id="my-pet-profile-img" th:src="@{${pet.profile_picture}}"></div> -->
+                <div class="myPetInfo-area" th:if="${#lists.size(pet) > 0}">
+                    <!-- <div><img id="my-pet-profile-img" th:src="@{${pet[0].profile_picture}}"></div> -->
                     <div><img id="my-pet-profile-img" th:src="@{/img/hatching-chick.png}"></div>
                     <div class="info-li">
                         <li><strong>이름 : </strong> <span th:text="${pet[0].name}"></span></li>
                         <li><strong>나이 : </strong> <span></span></li>
                         <li style="display: none;"><strong>생일 : </strong> <span th:text="${pet[0].birth}" id="pet-birth"></span></li></li>
                     </div>
+                </div>
+                <div class="myPetInfo-area"th:if="${#lists.size(pet) == 0}">
+                    <p class="null-message">등록된 반려친구 정보가 없습니다.<br>반려친구를 등록해주세요!</p>
                 </div>
             </div>
             <div id="calendar-area">
