--- a/src/main/resources/templates/mypage/pet-list.html
+++ b/src/main/resources/templates/mypage/pet-list.html
@@ -6,7 +6,7 @@
 	<title>반려친구 리스트</title>
 </head>
 <th:block layout:fragment="css">
-	<!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
+	<link rel="stylesheet" th:href="@{/css/mypage.css}">
 </th:block>
 <th:block layout:fragment="script">
 	<script th:src="@{/js/pet/pet-list.js}"></script>
@@ -16,7 +16,7 @@
 	<!-- sidebar fragment 사용 -->
 	<div th:replace="sidebar/mypage :: mypageSidebar"></div>
 	<div class="content">
-		<div class="join-link"><a href="/mypage/pet-join.do">반려 친구 등록</a></div>
+		<div class="h2-wrapper"><h2>반려친구 관리</h2><button type="button" id="pet-register-btn">반려 친구 등록</button></div>
 		<table>
 			<tr>
 				<th>이름</th>
