--- a/src/main/resources/templates/mypage/pet-list.html
+++ b/src/main/resources/templates/mypage/pet-list.html
@@ -7,9 +7,23 @@
 </head>
 <th:block layout:fragment="css">
 	<link rel="stylesheet" th:href="@{/css/mypage.css}">
+	<style>
+		.pet-list-item:hover {
+			transform: scale(1.03);
+			box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+		}
+	</style>
 </th:block>
 <th:block layout:fragment="script">
 	<script th:src="@{/js/pet/pet-list.js}"></script>
+	<script>
+		$(document).ready(function() {
+			$(".pet-list-item").on("click", function() {
+				const petNo = $(this).attr("data-pet-no");
+				window.location.href = `/mypage/pet-info/${petNo}.do`;
+			});
+		});
+	</script>
 </th:block>
 
 <div layout:fragment="content" class="container">
@@ -17,24 +31,33 @@
 	<div th:replace="sidebar/mypage :: mypageSidebar"></div>
 	<div class="content">
 		<div class="h2-wrapper"><h2>반려친구 관리</h2><button type="button" id="pet-register-btn">반려 친구 등록</button></div>
-		<table>
-			<tr>
-				<th>이름</th>
-				<th>생일</th>
-				<th>입양일</th>
-				<th>나이</th>
-			</tr>
-			<tr th:each="pet: ${petList}">
-				<td>
-					<a th:href="@{/mypage/pet-info/{id}.do(id=${pet.pet_no})}" th:text="${pet.name}"></a>
-				</td>
-				<!-- '생일' 날짜 서식 적용 -->
-				<td th:text="${#dates.format(pet.birth, 'yyyy-MM-dd')}"></td>
-				<!-- '입양일' 날짜 서식 적용 -->
-				<td th:text="${#dates.format(pet.adopted_at, 'yyyy-MM-dd')}"></td>
-				<!-- 나이 출력: JavaScript로 계산한 나이를 출력하기 위한 빈 엘리먼트 -->
-				<td class="age" th:data-birth="${#dates.format(pet.birth, 'yyyy-MM-dd')}"></td>
-			</tr>
-		</table>
+		<div th:each="pet : ${petList}" class="pet-list-item" th:data-pet-no="${pet.pet_no}">
+			<div class="pet-profile-area">
+				<img class="pet-profile-img" th:src="${pet.profile_picture}">
+			</div>
+			<div class="pet-info-area">
+				<div>
+					<div>이 름 :</div>
+					<div>나 이 :</div>
+					<div>생 일 :</div>
+					<div>입양일 :</div>
+				</div>
+				<div>
+					<div th:text="${pet.name}"></div>
+					<div class="age" th:data-birth="${#dates.format(pet.birth, 'yyyy-MM-dd')}"></div>
+					<div th:text="${#dates.format(pet.birth, 'yyyy-MM-dd')}"></div>
+					<div th:text="${#dates.format(pet.adopted_at, 'yyyy-MM-dd')}"></div>
+				</div>
+			</div>
+		</div>
+		<div th:if="${#lists.isEmpty(petList)}">
+			<p class="null-message">현재 등록된 반려친구 정보가 없습니다.<br>반려친구를 등록해주세요!</p>
+		</div>
 	</div>
 </div>
+	
+	
+	
+	
+	
+	
